// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card tests should match snapshot with default Card 1`] = `
<DocumentFragment>
  <div
    class="styles__Container-sc-173llyf-0 ZvqUv"
  >
    <div
      class="styles__ContainerAvatar-sc-2niw0e-0 hBSnoR"
    >
      <figure>
        <img
          class="styles__User-sc-2niw0e-1 fZoBAq"
          src="/"
        />
      </figure>
    </div>
    <div
      class="styles__Profile-sc-173llyf-2 hEXDum"
    >
      <div
        class="styles__About-sc-173llyf-1 bsNOCs"
      >
        <p
          class="styles__Text-sc-tpjft1-0 byLudI"
          color="black"
        />
        <div
          class="styles__ContainerInfo-sc-ks18od-0"
        >
          <div
            class="styles__Info-sc-ks18od-1 gZmPJP"
          >
            <p
              class="styles__Text-sc-tpjft1-0 llQDMz"
              color="black"
            />
            <p
              class="styles__Text-sc-tpjft1-0 ghGUWi"
              color="purple"
            >
              - 
            </p>
          </div>
        </div>
        <div>
          Stars
        </div>
        <div
          class="styles__ContainerPrice-sc-l5bh20-0 dJJZvy"
        >
          <p
            class="styles__Text-sc-tpjft1-0 eFfUut"
            color="text"
          >
            0
          </p>
          <p
            class="styles__Text-sc-tpjft1-0 jGCNOp"
            color="text"
          >
             / 50 minutos
          </p>
        </div>
        <div
          class="styles__ContainerDescription-sc-1j7k9k3-0 jVaJGV"
        >
          <p
            class="styles__Text-sc-tpjft1-0 jGCNOp"
            color="text"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Card tests should match snapshot with default Card with searchFreelance 1`] = `
<DocumentFragment>
  <div
    class="styles__Container-sc-173llyf-0 ZvqUv"
  >
    <div
      class="styles__ContainerAvatar-sc-2niw0e-0 hBSnoR"
    >
      <figure>
        <img
          class="styles__User-sc-2niw0e-1 fZoBAq"
          src="http:img.com"
        />
      </figure>
    </div>
    <div
      class="styles__Profile-sc-173llyf-2 hEXDum"
    >
      <div
        class="styles__About-sc-173llyf-1 bsNOCs"
      >
        <p
          class="styles__Text-sc-tpjft1-0 byLudI"
          color="black"
        >
          test
        </p>
        <div
          class="styles__ContainerInfo-sc-ks18od-0"
        >
          <div
            class="styles__Info-sc-ks18od-1 gZmPJP"
          >
            <p
              class="styles__Text-sc-tpjft1-0 llQDMz"
              color="black"
            >
              coach
            </p>
            <p
              class="styles__Text-sc-tpjft1-0 ghGUWi"
              color="purple"
            >
              - now
            </p>
          </div>
        </div>
        <div>
          Stars
        </div>
        <div
          class="styles__ContainerPrice-sc-l5bh20-0 dJJZvy"
        >
          <p
            class="styles__Text-sc-tpjft1-0 eFfUut"
            color="text"
          >
            100
          </p>
          <p
            class="styles__Text-sc-tpjft1-0 jGCNOp"
            color="text"
          >
             / 50 minutos
          </p>
        </div>
        <div
          class="styles__ContainerDescription-sc-1j7k9k3-0 jVaJGV"
        >
          <p
            class="styles__Text-sc-tpjft1-0 jGCNOp"
            color="text"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
